<resources>
    <string name="app_name">Book Store App</string>
    <string name="book_table_contains">The books table contains </string>
    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for editor menu option to save the book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <string name="row_id">\"Row ID \"</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="book_price">Book Price</string>
    <string name="quantity">Quantity</string>
    <string name="book_quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_information">Supplier Information</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="unknown_supplier">Unknown Supplier</string>
    <string name="orange_supplier">Orange Center</string>
    <string name="hiron_supplier">Hiron Bookstore</string>
    <string name="abv_supplier">ABV Bookstore</string>
    <string name="elephant_supplier">Elephant Bookstore</string>
    <string name="books_label">Books</string>
    <string name="add_book_label">Add a Book</string>
    <string name="editor_update_book_failed">Error saving book</string>
    <string name="editor_update_book_successful">Book saved</string>
    <string name="empty_view_title_text">Do you want to have stacked shelves?</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="book_store_label">Book Store</string>
    <string name="lv_text">lv</string>
    <string name="add_book">Add a Book</string>
    <string name="edit_book">Edit Book</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>


    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="unknown_author">Unknown Author</string>
    <string name="sale_button">Sale</string>
    <string name="sold_out">Book is sold out</string>
    <string name="successful_sale">Successfully sold 1 item</string>
    <string name="price_string">"Price: "</string>
    <string name="quantity_string">"Quantity: "</string>
    <string name="book_info">Book Info:</string>
    <string name="supplier_info">Supplier Info:</string>
    <string name="minus_button_text">-</string>
    <string name="plus_button_text">+</string>
    <string name="cant_less_than_zero">Can\'t have less than 0 books</string>
    <string name="order">Order</string>
    <string name="input_name">Please input a Book Name</string>
    <string name="input_author">Please input a Book Author</string>

</resources>
